--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.3.0",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.6.0",
+    "sweetalert2": "^10.8.1",
+    "sweetalert2-react-content": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
